fix bio modal on mobile (#28)

--- a/src/App.css
+++ b/src/App.css
@@ -596,6 +596,12 @@
   padding: 40px;
   background-color: rgba(248, 248, 247, 0.8);
 }
+@media (max-width: 700px) {
+  .WhoWeAreProfiles__descriptionBlock--inner {
+    height: 100vh;
+    padding: 20px;
+  }
+}
 
 .WhoWeAreProfiles__closeIcon {
   padding: 10px;
@@ -615,12 +621,28 @@
   display: flex;
   max-height: 500px;
 }
+@media (max-width: 700px) {
+  .WhoWeAreProfiles__selectedProfileBlock {
+    flex-direction: column;
+    max-height: 80vh;
+  }
+}
 
 .WhoWeAreProfiles__selectedProfileImage {
   filter: grayscale(100%);
-  width: 250px;
-  height: 300px;
+  min-width: 250px;
+  min-height: 300px;
   margin-right: 30px;
+}
+@media (max-width: 700px) {
+  .WhoWeAreProfiles__selectedProfileImage {
+    width: 166px !important;
+    height: 200px !important;
+    min-width: 166px;
+    min-height: 200px;
+    margin-right: 0;
+    margin-bottom: 16px;
+  }
 }
 
 .WhoWeAreProfiles__selectedProfileName {
@@ -636,6 +658,12 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
+}
+@media (max-width: 700px) {
+  .WhoWeAreProfiles__descriptionTextBlock {
+    flex-direction: column;
+    max-height: 80vh;
+  }
 }
 
 .WhoWeAreProfiles__description {
